<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gosuncn.mpa.player1.TestPlayer1Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onFourScreenClick"
                android:text="四分屏" />

            <EditText
                android:id="@+id/et_rtsp_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="rtsp url" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <com.gosuncn.mplay.RtspPlayer
                    android:id="@+id/rp_video"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <ProgressBar
                    android:id="@+id/pb_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onPlay1Click"
                    android:text="play" />

                <Button
                    android:id="@+id/btn_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onStop1Click"
                    android:text="stop" />
                <Button
                    android:id="@+id/btn_capture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCapture1Click"
                    android:text="capture" />

                <ToggleButton
                    android:id="@+id/tbtn_sound1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSound1Click"
                    android:textOn="声音开"
                    android:textOff="声音关"
                    />


            </LinearLayout>

            <EditText
                android:id="@+id/et_rtsp_url2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="rtsp url" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">

                <com.gosuncn.mplay.RtspPlayer
                    android:id="@+id/rp_video2"
                    android:layout_width="match_parent"
                    android:layout_height="300dp" />

                <ProgressBar
                    android:id="@+id/pb_loading2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    tools:visibility="visible" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onPlay2Click"
                    android:text="play" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onStop2Click"
                    android:text="stop" />

                <Button
                    android:id="@+id/btn_capture2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCapture2Click"
                    android:text="capture" />

                <ToggleButton
                    android:id="@+id/tbtn_sound2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSound2Click"
                    android:textOn="声音开"
                    android:textOff="声音关"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>